--- a/pollux_interface/templates/base.html
+++ b/pollux_interface/templates/base.html
@@ -69,9 +69,9 @@
                 <ul class="nav">
                     <li>
                         <a href="{{ url_for('main.index') }}">
-                            <i class="tim-icons icon-chart-pie-36">
+                            <i class="tim-icons icon-bank">
                             </i>
-                            Dashboard
+                            Home
                         </a>
                     </li>
                     <li>
@@ -116,25 +116,15 @@
                                 </i>
                             </a>
                             <ul class="dropdown-menu dropdown-navbar">
-                                <li class="nav-item dropdown-item">
-                                    <a onclick="create_new_project()">
-                                        <i class="fa fa-folder-o">
-                                        </i>
-                                        New Project
-                                    </a>
+                                <li class="nav-item dropdown-item" data-toggle="modal" href="#myNewProjectModal">
+                                    <i class="fa fa-folder-o">
+                                    </i>
+                                    New Project
                                 </li>
                                 <li class="nav-item dropdown-item" data-toggle="modal" href="#myProjectModal">
                                     <i class="fa fa-folder-open">
                                     </i>
                                     Open Project
-                                </li>
-                                {% if session.project_name %}
-                                <li class="nav-item dropdown-item">
-                                    <a onclick="close_project()">
-                                        <i class="fa fa-close">
-                                        </i>
-                                        Close Project
-                                    </a>
                                 </li>
                                 {% if current_user.role == 'admin' %}
                                 <li class="dropdown-divider">
@@ -147,7 +137,7 @@
                                     </a>
                                 </li>
                                 {% endif %}
-                                {% endif %}
+
                             </ul>
                         </li>
                         <li class="dropdown nav-item">
@@ -166,7 +156,7 @@
                         </li>
                         <li class="dropdown nav-item">
                             <input class="form-control" disabled="" id="project_case"
-                                style="width: 200px;color: rgb(255, 255, 255)" value="" />
+                                style="width: 200px;color: rgb(255, 255, 255)" value="{{ session.project_case }}" />
                         </li>
                     </ul>
                     <ul class="navbar-nav ml-auto">
@@ -253,7 +243,7 @@
                     </h3>
                 </div>
                 <div class="modal-body">
-                    <select id="project_name_list" style="width: 300px;height: 30px">
+                    <select id="project_name_list" class="form-control" style="height: 40px;color: rgb(0, 0, 0)">
                     </select>
                 </div>
                 <div class="modal-footer">
@@ -261,6 +251,39 @@
                         Close
                     </button>
                     <input class="btn btn-info" onclick="open_project();" type="button" value="Open" />
+                </div>
+            </div>
+        </div>
+    </div>
+    <div aria-hidden="true" aria-labelledby="myModalLabel" class="modal fade" id="myNewProjectModal" role="dialog"
+        tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button aria-hidden="true" class="close" data-dismiss="modal" type="button">
+                        ×
+                    </button>
+                    <h3 id="myModalLabel1" style="color: black">
+                        Create New Project
+                    </h3>
+                </div>
+                <div class="modal-body">
+                    Project Name: <input class="form-control" id="new_project_name" value=""
+                        style="height: 40px;color: rgb(0, 0, 0)" />
+                    <br>
+                    Project Type:
+                    <select id="project_case_list" class="form-control" style="height: 40px;color: rgb(0, 0, 0)">
+                        <option value="power_to_hydrogen">Power to Hydrogen</option>
+                        <option value="power_to_heat">Power to Heat</option>
+                    </select>
+                    <br>
+                    <br>
+                </div>
+                <div class="modal-footer">
+                    <button aria-hidden="true" class="btn" data-dismiss="modal">
+                        Close
+                    </button>
+                    <input class="btn btn-info" onclick="create_new_project();" type="button" value="Create" />
                 </div>
             </div>
         </div>
@@ -304,13 +327,9 @@
 </script>
 <script src="{{ url_for('static', filename='page/app_scenarioanalysis/js/scenario_management.js') }}">
 </script>
-<p>
-    {% if session.project_name %}
 
-    {% block script %}
-    {% endblock %}
+{% block script %}
+{% endblock %}
 
-    {% endif %}
-</p>
 
 </html>
